--- a/src/Styling/App.scss
+++ b/src/Styling/App.scss
@@ -1,21 +1,19 @@
 .App {
   width: 100vw;
-  display: grid;
-  grid-row-gap: 5vw;
-  // display: flex;
-  // flex-direction: column;
-  // justify-content: center;
-  // align-content: center;
+  // display: grid;
+  // grid-row-gap: 5vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
 
 
   h2 {
-    margin: 0;
+    margin: 3vw 0 1vw 0;
   }
 
   .row-1, .row-2 {
     width: 80vw;
     margin: auto;
-    // margin: auto auto 5vw auto;
-    // margin-bottom: 2vw;
   }
 }
