--- a/src/Styling/MovieQueue.scss
+++ b/src/Styling/MovieQueue.scss
@@ -1,11 +1,12 @@
 .queue-container {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-  grid-template-rows: auto;
+  // grid-template-rows: auto;
   grid-row-gap: 2vw;
   grid-column-gap: 2vw;
 
   width: 80vw;
   height: 20vw;
   border: 1px solid;
+  margin: 0 auto;
 }
