--- a/src/Styling/ListItem.scss
+++ b/src/Styling/ListItem.scss
@@ -1,12 +1,8 @@
-.movie-thumb {
+.list-item {
   display: grid;
   grid-template-rows: 22vw auto;
-  width: 10vw;
+  width: 15vw;
   height: 25vw;
-
-  // img, h5 {
-  //   margin: 0;
-  // }
 
   .img-box {
     // max-width: 100vw;
@@ -17,19 +13,27 @@
 
 
     img {
+      width: 100%;
       height: 100%;
-      // display: block;
-      // position: absolute;
-      // // min-height: 90%;
-      // // min-width: 90%;
-      // top: 50%;
-      // left: 50%;
-      // min-height: 100%;
-      // min-width: 100%;
-      // transform: translate(-50%, -50%);
-
     }
+
+    // .hoveredOver {
+    //   // background-image: linear-gradient(120deg, #eaee44, #33d0ff);
+    //   opacity: 0.2;
+    // }
   }
+
+
+  // .img-box:hover:after {
+  //   content: "";
+  //   position: absolute;
+  //   top: 0;
+  //   left: 0;
+  //   width: 100%;
+  //   height: 100%;
+  //   background-image: linear-gradient(120deg, #eaee44, #33d0ff);
+  //   opacity: 0.7;
+  // }
 
   .movie-info {
     display: grid;
